plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'java-autocad'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.example.javaautocad.AutoCad.Application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.example.javaautocad.AutoCad.Application',
            'Add-Opens': 'java.base/java.lang java.base/java.net.http'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveFileName = 'java-autocad.jar'
}
